tests/samples/negative/generics/generic_method_inference_conflict.ax
module generic_method_inference_conflict;

struct Box {
    value: i32;
}

impl Box {
    fn choose<T>(self: *const Box, left: T, right: T) -> T {
        return left;
    }
}

fn main() -> i32 {
    var box: Box = Box { value: 1 };
    return box.choose(1, true);
}
